// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > TextArea Matches snapshot when boolean prop "disabled" is set to: "false" 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.label)
    htmlFor="story"
  >
    <Text
      color="grayDarker"
      hasError={false}
      htmlFor="foo"
      type="label"
    >
      jest-auto-snapshots String Fixture
    </Text>
    <ForwardRef(styled.textarea)
      disabled={false}
      hasError={true}
      id="story"
      placeholder="jest-auto-snapshots String Fixture"
    >
      <NodeFixture />
    </ForwardRef(styled.textarea)>
  </ForwardRef(styled.label)>
  <ForwardRef(styled.div)>
    <WarningIcon
      size="medium"
    />
    <ForwardRef(Styled(Text))
      hasError={true}
      htmlFor="story"
      type="help"
    />
  </ForwardRef(styled.div)>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > TextArea Matches snapshot when boolean prop "hasError" is set to: "false" 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.label)
    htmlFor="story"
  >
    <Text
      color="grayDarker"
      hasError={false}
      htmlFor="foo"
      type="label"
    >
      jest-auto-snapshots String Fixture
    </Text>
    <ForwardRef(styled.textarea)
      disabled={true}
      hasError={false}
      id="story"
      placeholder="jest-auto-snapshots String Fixture"
    >
      <NodeFixture />
    </ForwardRef(styled.textarea)>
  </ForwardRef(styled.label)>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > TextArea Matches snapshot when passed all props 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.label)
    htmlFor="story"
  >
    <Text
      color="grayDarker"
      hasError={false}
      htmlFor="foo"
      type="label"
    >
      jest-auto-snapshots String Fixture
    </Text>
    <ForwardRef(styled.textarea)
      disabled={true}
      hasError={true}
      id="story"
      placeholder="jest-auto-snapshots String Fixture"
    >
      <NodeFixture />
    </ForwardRef(styled.textarea)>
  </ForwardRef(styled.label)>
  <ForwardRef(styled.div)>
    <WarningIcon
      size="medium"
    />
    <ForwardRef(Styled(Text))
      hasError={true}
      htmlFor="story"
      type="help"
    />
  </ForwardRef(styled.div)>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > TextArea Matches snapshot when passed only required props 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.label)
    htmlFor="story"
  >
    <Text
      color="grayDarker"
      hasError={false}
      htmlFor="foo"
      type="label"
    >
      jest-auto-snapshots String Fixture
    </Text>
    <ForwardRef(styled.textarea)
      disabled={false}
      hasError={false}
      id="story"
    >
      <NodeFixture />
    </ForwardRef(styled.textarea)>
  </ForwardRef(styled.label)>
</ForwardRef(styled.div)>
`;
